chore: harden token revocation and mark legacy app